the order of them in z-index notification is biger then mwnu and menu is biger then serche bar, make sure al z-index work good in all screen sizes

--- a/assets/scss/components/modules/_content-col.scss
+++ b/assets/scss/components/modules/_content-col.scss
@@ -1,6 +1,7 @@
 // Search on the top of each page with title of page
 #content-search-input {
-  z-index: 200;
+  //z-index: 200;
+  z-index: 6;
   position: sticky;
   top: 92px;
   align-items: flex-end;
