--- a/assets/scss/components/support.scss
+++ b/assets/scss/components/support.scss
@@ -25,6 +25,10 @@
   & .f-content-col #content-search-input {
     position: fixed;
     top: 92px;
+
+    right: 15px;
+    flex-shrink: 0;
+    width: 100%;
   }
 }
 
