--- a/assets/scss/pages/web.scss
+++ b/assets/scss/pages/web.scss
@@ -276,7 +276,8 @@ body {
 }
 
 .fixed-top-panel-d {
-  z-index: 10;
+  //z-index: 10;
+  z-index: 210;
   position: fixed;
   top: 0;
   right: 0;
